--- a/.github/workflows/test_upload_artifact.yml
+++ b/.github/workflows/test_upload_artifact.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Get version of package.json
         id: version
         run: |
-          VERSION=`cat package.json | jq '.devDependencies["@akashic/akashic-engine"]'`
+          VERSION=`cat package.json | jq -r '.devDependencies["@akashic/akashic-engine"]' | sed -e 's/^[\^~]//'`
           echo "::set-output name=VERSION::$VERSION"
       - name: Archive artifact
         uses: actions/upload-artifact@v2
