--- a/.github/workflows/test_upload_artifact.yml
+++ b/.github/workflows/test_upload_artifact.yml
@@ -35,6 +35,8 @@ jobs:
           path: ./dist
       - name: Create commits
         run: |
+          git config user.name '${{ github.actor }}'
+          git config user.email '${{ github.actor }}@users.noreply.github.com'
           git add -A
           git commit -m "Update to ${{ steps.version.outputs.VERSION }}"
       - name: Get workflow url
