--- a/.github/workflows/test_upload_artifact.yml
+++ b/.github/workflows/test_upload_artifact.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Archive artifact
         uses: actions/upload-artifact@v2
         with:
-          name: output_${{ steps.version.outputs.VERSION }}.zip
+          name: output_${{ steps.version.outputs.VERSION }}
           path: ./dist
       - name: Create commits
         run: |
