--- a/.github/workflows/test_upload_artifact.yml
+++ b/.github/workflows/test_upload_artifact.yml
@@ -40,20 +40,22 @@ jobs:
         run: |
           VERSION=`cat package.json | jq -r '.devDependencies["@akashic/akashic-engine"]'`
           echo "::set-output name=VERSION::$VERSION"
+      - name: Get workflow url
+        id: workflow
+        run: echo "::set-output name=WORKFLOW_URL::$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID"
       - name: Archive artifact
         uses: actions/upload-artifact@v2
         with:
           name: output_${{ steps.version.outputs.VERSION }}
           path: ./dist
+      - uses: technote-space/get-diff-action@v4
       - name: Create commits
         run: |
           git config user.name '${{ github.actor }}'
           git config user.email '${{ github.actor }}@users.noreply.github.com'
           git add -A
           git commit -m "Update to ${{ steps.version.outputs.VERSION }}"
-      - name: Get workflow url
-        id: workflow
-        run: echo "::set-output name=WORKFLOW_URL::$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID"
+        if: env.GIT_DIFF
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
@@ -65,3 +67,5 @@ jobs:
             ## 動作確認方法
             [こちら](${{ steps.workflow.outputs.WORKFLOW_URL }}) から **output_${{ steps.version.outputs.VERSION }}.zip** をダウンロードして、手元で実行できるかを確認してください。
           delete-branch: true
+        if: env.GIT_DIFF
+
