--- a/.github/workflows/test_upload_artifact.yml
+++ b/.github/workflows/test_upload_artifact.yml
@@ -48,21 +48,19 @@ jobs:
         with:
           name: output_${{ steps.version.outputs.VERSION }}
           path: ./dist
-      - uses: technote-space/get-diff-action@v4
-        with:
-          PATTERNS: |
-            src/**/*.ts
-            dist/**/*.js
-          FILES: |
-            package.json
+      - name: Get diff files
+        id: diff
+        run: |
+          echo "::set-output name=count::$(git diff --name-only | wc -l)"
       - name: Create commits
+        if: 0 < steps.diff.outputs.count
         run: |
           git config user.name '${{ github.actor }}'
           git config user.email '${{ github.actor }}@users.noreply.github.com'
           git add -A
           git commit -m "Update to ${{ steps.version.outputs.VERSION }}"
-        if: env.GIT_DIFF
       - name: Create Pull Request
+        if: 0 < steps.diff.outputs.count
         uses: peter-evans/create-pull-request@v3
         with:
           title: update to akashic-engine@${{ steps.version.outputs.VERSION }}
@@ -73,5 +71,4 @@ jobs:
             ## 動作確認方法
             [こちら](${{ steps.workflow.outputs.WORKFLOW_URL }}) から **output_${{ steps.version.outputs.VERSION }}.zip** をダウンロードして、手元で実行できるかを確認してください。
           delete-branch: true
-        if: env.GIT_DIFF
 
